// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Polkadot Asset Hub PSM > Asset lifecycle > addExternalAsset then setCeiling — mint succeeds > add asset then set ceiling: Minted event 1`] = `
[
  {
    "data": {
      "assetId": "(rounded 10000)",
      "externalAmount": 100000000,
      "fee": 500000,
      "pusdReceived": "(rounded 100000000)",
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Minted",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Asset lifecycle > addExternalAsset with zero ceiling — mint fails > add asset zero ceiling: mint ExtrinsicFailed 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x01000000",
          "index": 56,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Asset lifecycle > setMintingFee before adding asset — 3% fee applied on mint > set fee before add: Minted event 1`] = `
[
  {
    "data": {
      "assetId": "(rounded 10000)",
      "externalAmount": 1000000000,
      "fee": 30000000,
      "pusdReceived": 970000000,
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Minted",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Ceiling dynamics > mint 500, setMaxPsmDebt(1) blocks mint, restore allows mint > max debt blocks mint: ExtrinsicFailed 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x01000000",
          "index": 56,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Ceiling dynamics > mint 500, setMaxPsmDebt(1) blocks mint, restore allows mint > max debt restore: Minted event 1`] = `
[
  {
    "data": {
      "assetId": "(rounded 1300)",
      "externalAmount": 200000000,
      "fee": 1000000,
      "pusdReceived": "(rounded 200000000)",
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Minted",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Ceiling dynamics > setAssetCeilingWeight(USDT, 0) — mint USDC succeeds, debt equals amount > zeroed ceiling other asset: Minted event 1`] = `
[
  {
    "data": {
      "assetId": "(rounded 1300)",
      "externalAmount": 500000000,
      "fee": 2500000,
      "pusdReceived": "(rounded 500000000)",
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Minted",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Circuit breaker > AllDisabled — both mint and redeem fail > AllDisabled: mint ExtrinsicFailed 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x03000000",
          "index": 56,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Circuit breaker > AllDisabled — both mint and redeem fail > AllDisabled: redeem ExtrinsicFailed 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x04000000",
          "index": 56,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 900000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Circuit breaker > MintingDisabled — mint fails, redeem succeeds > MintingDisabled: Redeemed event 1`] = `
[
  {
    "data": {
      "assetId": "(rounded 1300)",
      "externalReceived": "(rounded 100000000)",
      "fee": 500000,
      "pusdPaid": 100000000,
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Redeemed",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Circuit breaker > MintingDisabled — mint fails, redeem succeeds > MintingDisabled: mint ExtrinsicFailed 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x03000000",
          "index": 56,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Circuit breaker > signed setMintingFee without root fails > signed setMintingFee: ExtrinsicFailed 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Core swaps > mint USDC to pUSD — pUSD received > 0, debt equals mint amount, fee to insurance fund > mint USDC: Minted event 1`] = `
[
  {
    "data": {
      "assetId": "(rounded 1300)",
      "externalAmount": 100000000,
      "fee": 500000,
      "pusdReceived": "(rounded 100000000)",
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Minted",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Core swaps > mint below MIN_SWAP fails > mint below MIN_SWAP: ExtrinsicFailed 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x02000000",
          "index": 56,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Core swaps > mint then redeem — USDC returned > 0 > mint then redeem: Minted event 1`] = `
[
  {
    "data": {
      "assetId": "(rounded 1300)",
      "externalAmount": 1000000000,
      "fee": 5000000,
      "pusdReceived": "(rounded 1000000000)",
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Minted",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Core swaps > mint then redeem — USDC returned > 0 > mint then redeem: Redeemed event 1`] = `
[
  {
    "data": {
      "assetId": "(rounded 1300)",
      "externalReceived": "(rounded 990000000)",
      "fee": "(rounded 5000000)",
      "pusdPaid": "(rounded 1000000000)",
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Redeemed",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Reserve integrity > mint 500, give Bob 2x debt pUSD, Bob redeems debt plus MIN_SWAP — ExtrinsicFailed > bob over-redeem: ExtrinsicFailed 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x00000000",
          "index": 56,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 900000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Reserve integrity > mint 500, redeem MIN_SWAP — Redeemed event > healthy redeem: Redeemed event 1`] = `
[
  {
    "data": {
      "assetId": "(rounded 1300)",
      "externalReceived": "(rounded 100000000)",
      "fee": 500000,
      "pusdPaid": 100000000,
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Redeemed",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Value conservation > Bob redeems more than reserve — ExtrinsicFailed > redeem exceeding reserve: ExtrinsicFailed 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x00000000",
          "index": 56,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 900000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Value conservation > set 1% fees, mint and redeem all — insurance fund gain > 0 > insurance fund gain: Minted event 1`] = `
[
  {
    "data": {
      "assetId": "(rounded 1300)",
      "externalAmount": 100000000,
      "fee": 1000000,
      "pusdReceived": 99000000,
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Minted",
    "section": "psm",
  },
]
`;

exports[`Polkadot Asset Hub PSM > Value conservation > set 1% mint fee, mint 1000, redeem all pUSD — residual debt > 0 > residual debt: Minted event 1`] = `
[
  {
    "data": {
      "assetId": "(rounded 1300)",
      "externalAmount": 1000000000,
      "fee": 10000000,
      "pusdReceived": 990000000,
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Minted",
    "section": "psm",
  },
]
`;
